--- a/calendar_new.html
+++ b/calendar_new.html
@@ -364,21 +364,28 @@
 const events = [
     {
         title: "FSU Football Season 2025",
-        date: new Date(2025, 2, 15),
+        date: new Date(2025, 5, 15),
         time: "10:00",
         stage: "research",
         description: "Season planning and analysis"
     },
     {
         title: "Seminoles Championship Run",
-        date: new Date(2025, 2, 20),
+        date: new Date(2025, 5, 20),
         time: "14:00",
         stage: "content",
         description: "Content preparation"
     },
     {
-        title: "FSU vs Miami Rivalry Analysis",
-        date: new Date(2025, 2, 25),
+        title: "10 Things to Know - Missouri",
+        date: new Date(2025, 6, 10),
+        time: "11:00",
+        stage: "graphics",
+        description: "Visual content creation"
+    },
+    {
+        title: "Arkansas vs Missouri Analysis",
+        date: new Date(2025, 6, 25),
         time: "11:00",
         stage: "graphics",
         description: "Visual content creation"
