--- a/create_project.html
+++ b/create_project.html
@@ -349,7 +349,7 @@
                         <button
                             type="submit"
                             class="btn submit-button"
-                            onclick="window.location='projects_overview.html'"
+                            onclick="window.location='project_overview_athlyte.html'"
                         >
                             <i class="material-icons left">save</i>Create
                             Project
@@ -507,7 +507,7 @@
                         "Are you sure you want to cancel? All entered data will be lost.",
                     )
                 ) {
-                    window.location.href = "projects.html";
+                    window.location.href = "project_overview_athlyte.html";
                 }
             }
         </script>
