--- a/project_overview_athlyte.html
+++ b/project_overview_athlyte.html
@@ -253,7 +253,7 @@
         </div>
         <div class="container">
             <div class="home-button">
-                <a href="athlyte_nm_new.html" class="btn-floating btn-large waves-effect waves-light">
+                <a href="index.html" class="btn-floating btn-large waves-effect waves-light">
                   <i class="material-icons">home</i>
                 </a>
               </div>
