--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
                     <h3 class="card-title">Narrative Management</h3>
                 </div>
                 <p class="card-desc">Create a new narrative project with custom settings and templates.</p>
-                <a href="index.html" class="btn btn-primary">Projects</a>
+                <a href="project_overview_athlyte.html" class="btn btn-primary">Projects</a>
             </div>
 
             <div class="action-card" id="quick-story-btn">
