--- a/project_new_content_draft_athlyte.html
+++ b/project_new_content_draft_athlyte.html
@@ -1438,7 +1438,7 @@ class="logo-above-sidebar"
             
             <div class="sidebar-item">
                 <i class="material-icons">dashboard</i>
-                    <a href="index.html"> Overview </a>
+                    <a href="project_overview_athlyte.html"> Overview </a>
             </div>
             <div class="sidebar-item">
                 <i class="material-icons">assignment</i>
