--- a/project_new_research_page_athlyte.html
+++ b/project_new_research_page_athlyte.html
@@ -1476,7 +1476,7 @@ class="logo-above-sidebar"
         
         <div class="nav-item">
             <i class="material-icons">dashboard</i>
-            <a href="index.html"> Overview </a>
+            <a href="project_overview_athlyte.html"> Overview </a>
         </div>
         <div class="nav-item">
             <i class="material-icons">assignment</i>
