--- a/projetc_new_graphics_athlyte.html
+++ b/projetc_new_graphics_athlyte.html
@@ -1141,7 +1141,7 @@
         
         <div class="sidebar-item">
             <i class="material-icons">dashboard</i>
-            <a href="index.html"> Overview </a>
+            <a href="project_overview_athlyte.html"> Overview </a>
         </div>
         <div class="sidebar-item">
             <i class="material-icons">assignment</i>
