--- a/grid_view.html
+++ b/grid_view.html
@@ -154,9 +154,9 @@
                     <select id="viewSelector" class="browser-default" style="background-color: #73d2e7; color: white; border: none; border-radius: 4px; padding: 8px; width: 100%;"                         onchange="location = this.value"
 >
                         <option
-                            value="index.html"
+                            value="project_overview_athlyte.html"
 
-                            onselect="window.location='index.html'"
+                            onselect="window.location='project_overview_athlyte.html'"
                         >
                             Workflow View
                         </option>
