--- a/create_project.html
+++ b/create_project.html
@@ -259,7 +259,7 @@
 
              <!-- Add this inside the archive-header div, at the beginning -->
 <div class="home-button">
-    <a href="index.html" class="btn-floating btn-large waves-effect waves-light">
+    <a href="project_overview_athlyte.html" class="btn-floating btn-large waves-effect waves-light">
       <i class="material-icons">dashboard</i>
     </a>
   </div>
