--- a/narrative_generation_athlyte.html
+++ b/narrative_generation_athlyte.html
@@ -591,7 +591,7 @@
                         "Cam Skattebo": [
                             {
                                 text: "Cam Skattebo had an ALL-TIME GAME. Future NFL star?",
-                                img: "https://scontent.fhyd2-2.fna.fbcdn.net/v/t39.30808-6/487815859_1236981341793388_6541725534997734366_n.jpg?stp=dst-jpg_s640x640_tt6&_nc_cat=103&ccb=1-7&_nc_sid=127cfc&_nc_ohc=8UXI-nQggWYQ7kNvwHgKowA&_nc_oc=AdmfbVYPFvUUra_r93VWpd3bhTLAvrdsj5EqdDq-OwpluPSq1UnZ1TCGUTSpgRiMBcY&_nc_zt=23&_nc_ht=scontent.fhyd2-2.fna&_nc_gid=kDzOdTUfzCvxPxTQWARQ3w&oh=00_AfJPxWKn7QtQv51dkHK69Tu7oqO9zbzZ7UtZQ36JPFjcgg&oe=683E0E23"
+                                img: "https://img.fcbayern.com/image/upload/f_auto/q_auto/t_cms-16x9-seo-thumbnail/v1668360410/cms/public/images/fcbayern-com/homepage/Saison-22-23/Galerien/NFL-at-FCB/NFL%20-%20Sonntag/03-nfl-son-mel.jpg"
                             }
                         ],
                         "Kyle McCord": [    
